Version: 1.3.0
Date: 8 April 2022
  Features:
    - 'Control + Shift + Click' on any ingame object (e.g. an item in your inventory) to open it in Factory Search
    - Added 'Request' search option to search for logistic containers requesting the item
    - Added scroll bar that appears when the search results are too long to fit on the screen
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 8 April 2022
  Features:
    - Added 'Entities' search option to search for built entities of that item
    - Added 'Ground' search option to search for the item on the ground
    - Added 'Signals' search option to search for entities emitting that signal (mod API is limited so doesn't support all entities)
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 7 April 2022
  Bugfixes:
    - Fixed not showing results from all planets if some planets had no results
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 7 April 2022
  Changes:
    - Changed default keybind from 'Control + F' to 'Control + Shift + F' to avoid collision with vanilla search keybind on Windows
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 7 April 2022
  Changes:
    - Increased highlight box duration from 10s to 20s
  Bugfixes:
    - Fixed crash when viewing a search result on Nauvis from a different planet (with Space Exploration)
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 7 April 2022
  Bugfixes:
    - Fixed crash when selecting a 'virtual' signal (not an item or fluid)
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 6 April 2022
  Bugfixes: