@@ -6,6 +6,7 @@ search-factory=Search factory
 
 [controls]
 search-factory=Search factory
+open-search-prototype=Search factory for selected object
 
 [search-gui]
 explanation=Select an item to search
@@ -21,7 +22,7 @@ entities-name=Entity
 signals-name=Signal
 producers-tooltip=Search for machines that produce this item\n(e.g. __1__)
 storage-tooltip=Search for containers that contain this item\n(e.g. __1__)
-requesters-tooltip=Search for logistic containers that request this item\n(e.g. __1__ and machines requesting modules)
+requesters-tooltip=Search for logistic containers that are requesting this item\n(e.g. __1__ and machines requesting modules)
 ground-items-tooltip=Search for this item on the ground
 entities-tooltip=Search for built entities of this item
 signals-tooltip=Search for entities that are sending this signal\n(limited to these types: __1__)
